build_errors.txt
warning: unused import: `std::io::Write`
 --> src/export.rs:1:5
  |
1 | use std::io::Write;
  |     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
  --> src/renderer.rs:36:13
   |
36 |         let mut buffer = vec![0u8; (self.width * self.height * 4) as usize];
   |             ----^^^^^^
   |             |
   |             help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `project`
  --> src/renderer.rs:35:36
   |
35 |     pub fn render_frame(&mut self, project: &EngineProject, frame: u32) -> Result<Vec<u8>, RenderError> {
   |                                    ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_project`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `frame`
  --> src/renderer.rs:35:61
   |
35 |     pub fn render_frame(&mut self, project: &EngineProject, frame: u32) -> Result<Vec<u8>, RenderError> {
   |                                                             ^^^^^ help: if this is intentional, prefix it with an underscore: `_frame`

warning: unused variable: `total_frames`
  --> src/export.rs:31:9
   |
31 |     let total_frames: u32 = project
   |         ^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_total_frames`

warning: `ai_offline_animation_engine` (lib) generated 5 warnings (run `cargo fix --lib -p ai_offline_animation_engine` to apply 4 suggestions)
error[E0433]: cannot find module or crate `engine` in this scope
  --> src/main.rs:29:11
   |
29 |     match engine::runtime::run(path) {
   |           ^^^^^^ use of unresolved module or unlinked crate `engine`
   |
   = help: if you wanted to use a crate named `engine`, use `cargo add engine` to add it to your `Cargo.toml`

For more information about this error, try `rustc --explain E0433`.
error: could not compile `ai_offline_animation_engine` (bin "animation_engine") due to 1 previous error
Error: Process completed with exit code 101.